<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_file_reader</name>
  <version>1.0.0</version>
  <description>Standalone program to check mission files for validity in the same way that Mission Control does</description>
  <maintainer email="phg6386@thi.de">philipp</maintainer>
  <license>MIT</license>
  <url>https://github.com/THI-Drone/mission_file_reader</url>
  <author email="pgh6386@thi.de">philipp</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>common_package</depend>
  <depend>mission_control_package</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
